--- a/DanceCalc/music4dance/Views/Song/Edit.cshtml
+++ b/DanceCalc/music4dance/Views/Song/Edit.cshtml
@@ -6,10 +6,12 @@
 
 <h2>Edit</h2>
 
-@using (Html.BeginForm()) {
+@using (Html.BeginForm("Edit","Song")) {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
 
+    SongDatabase.Models.Song old = ViewBag.OldSong;
+    
     <fieldset>
         <legend>Song</legend>
 
@@ -22,7 +24,13 @@
             @Html.EditorFor(model => model.Title)
             @Html.ValidationMessageFor(model => model.Title)
         </div>
-
+        @if (old != null & !string.IsNullOrWhiteSpace(old.Title))
+        { 
+        <div class="editor-alternate">
+            @old.Title
+        </div>
+        }
+        
         <div class="editor-label">
             @Html.LabelFor(model => model.Artist)
         </div>
@@ -30,14 +38,33 @@
             @Html.EditorFor(model => model.Artist)
             @Html.ValidationMessageFor(model => model.Artist)
         </div>
+        @if (old != null & !string.IsNullOrWhiteSpace(old.Artist))
+        {
+            <div class="editor-alternate">
+                @old.Artist
+            </div>
+        }
 
         <div class="editor-label">
             @Html.LabelFor(model => model.Album)
         </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Album)
+
+        @*<div class="editor-field">
+            @Html.TextBoxFor(model => model.Album)
             @Html.ValidationMessageFor(model => model.Album)
+        </div>*@
+        <div class="editor-field">
+            <input id="Album" name="Album" type="text" value="@Model.Album" />
+            <span class="field-validation-valid" data-valmsg-for="Album" data-valmsg-replace="true"></span>
         </div>
+
+
+        @if (old != null & !string.IsNullOrWhiteSpace(old.Album))
+        {
+            <div class="editor-alternate">
+                @old.Album
+            </div>
+        }
 
         <div class="editor-label">
             @Html.LabelFor(model => model.Tempo)
@@ -46,6 +73,12 @@
             @Html.EditorFor(model => model.Tempo)
             @Html.ValidationMessageFor(model => model.Tempo)
         </div>
+        @if (old != null & old.Tempo != null)
+        {
+            <div class="editor-alternate">
+                @old.Tempo.Value
+            </div>
+        }
 
         <div class="editor-label">
             @Html.LabelFor(model => model.Track)
@@ -54,6 +87,12 @@
             @Html.EditorFor(model => model.Track)
             @Html.ValidationMessageFor(model => model.Track)
         </div>
+        @if (old != null & old.Track != null)
+        {
+            <div class="editor-alternate">
+                @old.Track.Value
+            </div>
+        }
 
         <div class="editor-label">
             @Html.LabelFor(model => model.Length)
@@ -62,6 +101,12 @@
             @Html.EditorFor(model => model.Length)
             @Html.ValidationMessageFor(model => model.Length)
         </div>
+        @if (old != null & old.Length != null)
+        {
+            <div class="editor-alternate">
+                @old.Length.Value
+            </div>
+        }
 
         <div class="editor-label">
             @Html.LabelFor(model => model.Publisher)
@@ -70,6 +115,26 @@
             @Html.EditorFor(model => model.Publisher)
             @Html.ValidationMessageFor(model => model.Publisher)
         </div>
+        @if (old != null & !string.IsNullOrWhiteSpace(old.Publisher))
+        {
+            <div class="editor-alternate">
+                @old.Genre
+            </div>
+        }
+
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Purchase)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Purchase)
+            @Html.ValidationMessageFor(model => model.Purchase)
+        </div>
+        @if (old != null & !string.IsNullOrWhiteSpace(old.Purchase))
+        {
+            <div class="editor-alternate">
+                @old.Purchase
+            </div>
+        }
 
         <div class="editor-label">
             @Html.LabelFor(model => model.Genre)
@@ -78,6 +143,12 @@
             @Html.EditorFor(model => model.Genre)
             @Html.ValidationMessageFor(model => model.Genre)
         </div>
+        @if (old != null & !string.IsNullOrWhiteSpace(old.Genre))
+        {
+            <div class="editor-alternate">
+                @old.Genre
+            </div>
+        }
 
         <div class="display-label">
              Dance(s):
