--- a/DanceCalc/music4dance/Views/Song/Edit.cshtml
+++ b/DanceCalc/music4dance/Views/Song/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model SongDatabase.Models.Song
+﻿@model SongDatabase.Models.SongDetails
 
 @{
     ViewBag.Title = "Edit";
@@ -10,7 +10,16 @@
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
 
-    SongDatabase.Models.Song old = ViewBag.OldSong;
+    SongDatabase.Models.Song old = null;
+    
+    try
+    {
+        old = ViewBag.OldSong;
+    }
+    catch (Microsoft.CSharp.RuntimeBinder.RuntimeBinderException)  
+    {
+        
+    }
     
     <fieldset>
         <legend>Song</legend>
@@ -24,7 +33,7 @@
             @Html.EditorFor(model => model.Title)
             @Html.ValidationMessageFor(model => model.Title)
         </div>
-        @if (old != null & !string.IsNullOrWhiteSpace(old.Title))
+        @if (old != null && !string.IsNullOrWhiteSpace(old.Title))
         { 
         <div class="editor-alternate">
             @old.Title
@@ -38,33 +47,35 @@
             @Html.EditorFor(model => model.Artist)
             @Html.ValidationMessageFor(model => model.Artist)
         </div>
-        @if (old != null & !string.IsNullOrWhiteSpace(old.Artist))
+        @if (old != null && !string.IsNullOrWhiteSpace(old.Artist))
         {
             <div class="editor-alternate">
                 @old.Artist
             </div>
         }
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Album)
+@*
+    <div class="editor-label">
+        @Html.LabelFor(model => model.Album)
+    </div>
+
+    <div class="editor-field">
+        @Html.TextBoxFor(model => model.Album)
+        @Html.ValidationMessageFor(model => model.Album)
+    </div>
+    <div class="editor-field">
+        <input id="Album" name="Album" type="text" value="@Model.Album" />
+        <span class="field-validation-valid" data-valmsg-for="Album" data-valmsg-replace="true"></span>
+    </div>
+
+    @if (old != null && !string.IsNullOrWhiteSpace(old.Album))
+    {
+        <div class="editor-alternate">
+            @old.Album
         </div>
+    }
+*@
 
-        @*<div class="editor-field">
-            @Html.TextBoxFor(model => model.Album)
-            @Html.ValidationMessageFor(model => model.Album)
-        </div>*@
-        <div class="editor-field">
-            <input id="Album" name="Album" type="text" value="@Model.Album" />
-            <span class="field-validation-valid" data-valmsg-for="Album" data-valmsg-replace="true"></span>
-        </div>
-
-
-        @if (old != null & !string.IsNullOrWhiteSpace(old.Album))
-        {
-            <div class="editor-alternate">
-                @old.Album
-            </div>
-        }
 
         <div class="editor-label">
             @Html.LabelFor(model => model.Tempo)
@@ -73,24 +84,10 @@
             @Html.EditorFor(model => model.Tempo)
             @Html.ValidationMessageFor(model => model.Tempo)
         </div>
-        @if (old != null & old.Tempo != null)
+        @if (old != null && old.Tempo != null)
         {
             <div class="editor-alternate">
                 @old.Tempo.Value
-            </div>
-        }
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Track)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Track)
-            @Html.ValidationMessageFor(model => model.Track)
-        </div>
-        @if (old != null & old.Track != null)
-        {
-            <div class="editor-alternate">
-                @old.Track.Value
             </div>
         }
 
@@ -101,38 +98,10 @@
             @Html.EditorFor(model => model.Length)
             @Html.ValidationMessageFor(model => model.Length)
         </div>
-        @if (old != null & old.Length != null)
+        @if (old != null && old.Length != null)
         {
             <div class="editor-alternate">
                 @old.Length.Value
-            </div>
-        }
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Publisher)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Publisher)
-            @Html.ValidationMessageFor(model => model.Publisher)
-        </div>
-        @if (old != null & !string.IsNullOrWhiteSpace(old.Publisher))
-        {
-            <div class="editor-alternate">
-                @old.Genre
-            </div>
-        }
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Purchase)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Purchase)
-            @Html.ValidationMessageFor(model => model.Purchase)
-        </div>
-        @if (old != null & !string.IsNullOrWhiteSpace(old.Purchase))
-        {
-            <div class="editor-alternate">
-                @old.Purchase
             </div>
         }
 
@@ -143,7 +112,7 @@
             @Html.EditorFor(model => model.Genre)
             @Html.ValidationMessageFor(model => model.Genre)
         </div>
-        @if (old != null & !string.IsNullOrWhiteSpace(old.Genre))
+        @if (old != null && !string.IsNullOrWhiteSpace(old.Genre))
         {
             <div class="editor-alternate">
                 @old.Genre
@@ -161,11 +130,61 @@
                 {
                     @separator;
                     @Html.DisplayFor(model => item.Dance.Info.Name)
+                    if(item.Weight > 1)
+                    {
+                        <b>(@item.Weight)</b>
+                    }
                     separator = ", "; 
                 }
             }
         </div>
+        <div class="editor-field">
+            @Html.ListBox("dances", ViewBag.DanceList as MultiSelectList, new { @class = "chzn-select", data_placeholder = "Choose Dances..." })
+        </div>
         <br/>
+
+        @if (User.IsInRole("showDiagnostics"))
+        {
+            <table>
+            <tr>
+                <th>ID</th>
+                <th>Name</th>
+                <th>Value</th>
+            </tr>
+
+            @{
+                int index = 0;
+                foreach (SongDatabase.Models.SongProperty sp in Model.Properties)
+                {
+                    string propIdx = string.Format("Properties[{0}].", index);
+                    string propName = propIdx + "Name";
+                    string propValue = propIdx + "Value";
+                    <tr>
+                        <td>
+                            @{
+                                Html.Hidden(propIdx + "SongId", sp.SongId);
+                                Html.Hidden(propIdx + "Id", sp.Id);
+                                <text>@sp.Id</text>
+                            }
+                        </td>
+                        <td>
+                            <div class="editor-field">
+                                <input id="@propName" name="@propName" type="text" value="@sp.Name" />
+                                @*<span class="field-validation-valid" data-valmsg-for="Album" data-valmsg-replace="true"></span>*@
+                            </div>
+                        </td>
+                        <td>
+                            <div class="editor-field">
+                                <input id="@propValue" name="@propValue" type="text" value="@sp.Value" />
+                                @*<span class="field-validation-valid" data-valmsg-for="Album" data-valmsg-replace="true"></span>*@
+                            </div>
+                        </td>
+                    </tr>
+                    index += 1;
+                }
+            }
+            </table>
+        }
 
         <div class="display-label">
             @Html.DisplayNameFor(model => model.Created):
@@ -174,7 +193,7 @@
             @Html.DisplayFor(model => model.Created)
             @Html.HiddenFor(model => model.Created)
         </div>
-        <br/>
+        <br />
 
         <div class="display-label">
             @Html.DisplayNameFor(model => model.Modified):
@@ -182,14 +201,12 @@
         <div class="display-field">
             @Html.DisplayFor(model => model.Modified)
         </div>
-        <br/>
-
-        @Html.HiddenFor(model => model.Purchase)
+        <br />
 
         <p>
             <input type="submit" value="Save" />
         </p>
-    </fieldset>
+</fieldset>
 }
 
 <div>
@@ -198,4 +215,7 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    <script src="@Url.Content("~/Scripts/chosen.jquery.js")" type="text/javascript"></script>
+    <link href="@Url.Content("~/Content/chosen.css")" rel="stylesheet" type="text/css" />
+    <script>$(".chzn-select").chosen({ width: "500px" });</script>
 }
