--- a/DanceCalc/music4dance/Views/Song/Edit.cshtml
+++ b/DanceCalc/music4dance/Views/Song/Edit.cshtml
@@ -138,8 +138,18 @@
                 }
             }
         </div>
+
+        <div class="editor-label">
+            Remove Dances from this list to vote them down.
+        </div>
         <div class="editor-field">
-            @Html.ListBox("dances", ViewBag.DanceList as MultiSelectList, new { @class = "chzn-select", data_placeholder = "Choose Dances..." })
+            @Html.ListBox("remDances", ViewBag.DanceListRemove as MultiSelectList, new { @class = "chzn-select", data_placeholder = "Remove Dances to Vote Down..." })
+        </div>
+        <div class="editor-label">
+            Add dances to this list to vote them up.
+        </div>
+        <div class="editor-field">          
+            @Html.ListBox("addDances", ViewBag.DanceListAdd as MultiSelectList, new { @class = "chzn-select", data_placeholder = "Choose Dances to Vote Up..." })
         </div>
         <br/>
 
