Get actual addition of alternate albums in.
Still need: Modify album + better view + purchase info.

--- a/DanceCalc/music4dance/Content/Site.css
+++ b/DanceCalc/music4dance/Content/Site.css
@@ -485,7 +485,31 @@ input, textarea {
     font-size: 1.2em;
     margin: 5px 0 6px 0;
     padding: 5px;
-    width: 500px;
+    width: 100%;
+}
+
+.track-header {
+    width: 50px;
+    font-size: 1.2em;
+    font-weight: 600;
+}
+
+.delete-header {
+    width: 50px;
+    font-size: 1.2em;
+    font-weight: 600;
+}
+
+.album-header {
+    width: 70%;
+    font-size: 1.2em;
+    font-weight: 600;
+}
+
+.publisher-header {
+    width: 30%;
+    font-size: 1.2em;
+    font-weight: 600;
 }
 
 textarea {
