--- a/DanceCalc/music4dance/Views/Song/Edit.cshtml
+++ b/DanceCalc/music4dance/Views/Song/Edit.cshtml
@@ -54,6 +54,75 @@
             </div>
         }
 
+        <table>
+            <tr><td class="album-header">Album</td><td class="track-header">Track</td><td class="publisher-header">Label</td><td class="delete-header"></td></tr>
+            @{
+                int currentAlbum = 0;
+                int maxAlbum = currentAlbum + 5;
+                if (Model.Albums != null)
+                {
+                    for (; currentAlbum < Model.Albums.Count; currentAlbum++)
+                    {
+                        string albumId = "Album_" + currentAlbum.ToString();
+                        string deleteId = "Delete_" + currentAlbum.ToString();
+                        <tr id="@albumId">
+                            <td>
+                                <div class="editor-field">
+                                    @Html.TextBoxFor(model => model.Albums[currentAlbum].Name)
+                                    @Html.ValidationMessageFor(model => model.Albums[currentAlbum].Name)
+                                </div>
+                            </td>
+                            <td>
+                                <div class="editor-field">
+                                    @Html.TextBoxFor(model => model.Albums[currentAlbum].Track)
+                                    @Html.ValidationMessageFor(model => model.Albums[currentAlbum].Track)
+                                </div>
+                            </td>
+                            <td>
+                                <div class="editor-field">
+                                    @Html.TextBoxFor(model => model.Albums[currentAlbum].Publisher)
+                                    @Html.ValidationMessageFor(model => model.Albums[currentAlbum].Publisher)
+                                </div>
+                            </td>
+                            <td>
+                                <button type="button" id="@deleteId">X</button>
+                            </td>
+                        </tr>
+                    }
+                }
+                
+                for (; currentAlbum < maxAlbum; currentAlbum += 1)
+                {
+                    string albumId = "Album_" + currentAlbum.ToString();
+                    Model.Albums.Add(new SongDatabase.Models.AlbumDetails());
+                    <tr id="@albumId" hidden>
+                        <td>
+                            <div class="editor-field">
+                                @Html.TextBoxFor(model => model.Albums[currentAlbum].Name)
+                                @Html.ValidationMessageFor(model => model.Albums[currentAlbum].Name)
+                            </div>
+                        </td>
+                        <td>
+                            <div class="editor-field">
+                                @Html.TextBoxFor(model => model.Albums[currentAlbum].Track)
+                                @Html.ValidationMessageFor(model => model.Albums[currentAlbum].Track)
+                            </div>
+                        </td>
+                        <td>
+                            <div class="editor-field">
+                                @Html.TextBoxFor(model => model.Albums[currentAlbum].Publisher)
+                                @Html.ValidationMessageFor(model => model.Albums[currentAlbum].Publisher)
+                            </div>
+                        </td>
+                    </tr>
+                }
+                
+                <tr>
+                    <td colspan="3"><button type="button" id="AddAlbum">New Album</button></td>
+                </tr>
+            }
+        </table>
+
 @*
     <div class="editor-label">
         @Html.LabelFor(model => model.Album)
@@ -153,6 +222,7 @@
         </div>
         <br/>
 
+        @*
         @if (User.IsInRole("showDiagnostics"))
         {
             <table>
@@ -180,13 +250,11 @@
                         <td>
                             <div class="editor-field">
                                 <input id="@propName" name="@propName" type="text" value="@sp.Name" />
-                                @*<span class="field-validation-valid" data-valmsg-for="Album" data-valmsg-replace="true"></span>*@
                             </div>
                         </td>
                         <td>
                             <div class="editor-field">
                                 <input id="@propValue" name="@propValue" type="text" value="@sp.Value" />
-                                @*<span class="field-validation-valid" data-valmsg-for="Album" data-valmsg-replace="true"></span>*@
                             </div>
                         </td>
                     </tr>
@@ -195,6 +263,7 @@
             }
             </table>
         }
+        *@
 
         <div class="display-label">
             @Html.DisplayNameFor(model => model.Created):
@@ -227,5 +296,10 @@
     @Scripts.Render("~/bundles/jqueryval")
     <script src="@Url.Content("~/Scripts/chosen.jquery.js")" type="text/javascript"></script>
     <link href="@Url.Content("~/Content/chosen.css")" rel="stylesheet" type="text/css" />
-    <script>$(".chzn-select").chosen({ width: "500px" });</script>
+    <script>
+        $(".chzn-select").chosen({ width: "500px" });
+        var albumCount = @Model.Albums.Count-4;
+        var albumsAdded = 0;
+    </script>
+    <script src="@Url.Content("~/Scripts/edit.js?@Html.Raw(DateTime.Now.Ticks.ToString())")" type="text/javascript"></script>
 }
