Get album editing and deleting mostly working as well as better visualization for alternate albums.
Stilll needed: Update the main field in the song table when it is affected by album editing

Also: Should we enable re-ordering of albums?

--- a/DanceCalc/music4dance/Content/Site.css
+++ b/DanceCalc/music4dance/Content/Site.css
@@ -377,6 +377,10 @@ aside {
     font-weight: 600;
 }
 
+.display-label-alternate {
+    margin-left: 20px;
+}
+
 .display-field {
     display: inline;
     font-size: 1.2em;
