Get some more validation in and fix the round trip for invalid model

--- a/DanceCalc/music4dance/Views/Song/Edit.cshtml
+++ b/DanceCalc/music4dance/Views/Song/Edit.cshtml
@@ -86,7 +86,7 @@
                             </td>
                             <td>
                                 <button type="button" id="@deleteId">X</button>
-                                @Html.HiddenFor(model => model.Albums[currentAlbum].Purchase)
+                                @*@Html.HiddenFor(model => model.Albums[currentAlbum].Purchase)*@
                             </td>
                         </tr>
                     }
