Get basic batch uploading working again after album split

--- a/DanceCalc/music4dance/Views/Song/Details.cshtml
+++ b/DanceCalc/music4dance/Views/Song/Details.cshtml
@@ -120,7 +120,7 @@
                 IList<string> info = album.GetPurcahseInfo();
                 foreach (string p in info)
                 {
-                    <text>@p + " "</text>
+                    <text>@p </text>
                 }
             }
             
