Small refactor to put ViewModels all in teir own folder in the database project

--- a/DanceCalc/music4dance/Views/Home/About.cshtml
+++ b/DanceCalc/music4dance/Views/Home/About.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<music4dance.ViewModels.SongCounts>
+﻿@model IEnumerable<SongDatabase.ViewModels.SongCounts>
 
 @{
     ViewBag.Title = "About";
