--- a/DanceCalc/music4dance/Views/Song/Create.cshtml
+++ b/DanceCalc/music4dance/Views/Song/Create.cshtml
@@ -1,71 +1,17 @@
-﻿@model SongDatabase.Models.Song
+﻿@model SongDatabase.Models.SongDetails
 
 @{
     ViewBag.Title = "Create";
+    ViewBag.Action = "Create";
+    ViewBag.Submit = "Create";
+    ViewBag.CanRemoveDance = false;
+
+    //Model = new SongDatabase.Models.SongDetails();
 }
 
 <h2>Create</h2>
 
-@using (Html.BeginForm()) {
-    @Html.AntiForgeryToken()
-    @Html.ValidationSummary(true)
-
-    <fieldset>
-        <legend>Song</legend>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Source)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Source)
-            @Html.ValidationMessageFor(model => model.Source)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Dances)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Dances)
-            @Html.ValidationMessageFor(model => model.Dances)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Tempo)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Tempo)
-            @Html.ValidationMessageFor(model => model.Tempo)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Title)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Title)
-            @Html.ValidationMessageFor(model => model.Title)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Artist)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Artist)
-            @Html.ValidationMessageFor(model => model.Artist)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Album)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Album)
-            @Html.ValidationMessageFor(model => model.Album)
-        </div>
-
-        <p>
-            <input type="submit" value="Create" />
-        </p>
-    </fieldset>
-}
+@Html.Partial("EditCore")
 
 <div>
     @Html.ActionLink("Back to List", "Index")
@@ -73,4 +19,12 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    <script src="@Url.Content("~/Scripts/chosen.jquery.js")" type="text/javascript"></script>
+    <link href="@Url.Content("~/Content/chosen.css")" rel="stylesheet" type="text/css" />
+    <script>
+        $(".chzn-select").chosen({ width: "500px" });
+        var albumCount = @Model.Albums.Count-5;
+        var albumsAdded = 0;
+    </script>
+    <script src="@Url.Content("~/Scripts/edit.js?@Html.Raw(DateTime.Now.Ticks.ToString())")" type="text/javascript"></script>
 }
