--- a/DanceCalc/music4dance/Views/Song/Index.cshtml
+++ b/DanceCalc/music4dance/Views/Song/Index.cshtml
@@ -120,11 +120,12 @@
     {
         <input type="submit" name="action" value="Merge" />
         <input type="submit" name="action" value="Delete" />
-    }
+        @Html.ActionLink("Add New Song", "Create");
+    }    
 </p>
 }
 
 Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
-(@Model.TotalItemCount song found.)
+(@Model.TotalItemCount songs found.)
 
 @Html.PagedListPager( Model, page => Url.Action(ViewBag.ActionName, new { page, sortOrder = ViewBag.CurrentSort, currentFilter=ViewBag.CurrentFilter, dances=ViewBag.CurrentDances, level=ViewBag.Level }) )
