--- a/DanceCalc/m4d/Views/Home/Index.cshtml
+++ b/DanceCalc/m4d/Views/Home/Index.cshtml
@@ -3,29 +3,35 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
+    <h1>What is Music4Dance.Net?</h1>
+    <p class="lead">Note: Please feel free to explore this site, however it is currently in very early Alpha so any registration or data entered will be lost at the next upgrade.</p>
 </div>
 
 <div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
+    <div class="col-md-3">
+        <h2>It is an idea</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            This is an early concrete representation of an idea that has been floating around in my head since I first started learning to ballroom dance in the early 1990s (man that was a long time ago).
+            As someone with a fairly robust music background and a very robust foundation in computer science, it's always annoyed me that there isn't a good way to find music to dance to.
         </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+    <div class="col-md-3">
+        <h2>My first very small step</h2>
+        <p>The problem is, my grand vision of how to solve this problem requires <i>a lot</i> of moving parts.  But after reading The Lean Startup I decided to use this as a way of trying to bite off small chucks
+        of a project to get a minimal usable product.  The result of this was a small windows phone 7 application that asks you to tap out the beat of a song that you're listening to and will show you
+        which dances in its database it would work for.  This is based entirely on tempo and meter and has nothing to do with the style of the song.</p>
+        <p><a class="btn btn-default" href="http://www.windowsphone.com/en-us/store/app/dancecalc/b414c752-cc97-e011-986b-78e7d1fa76f8">See the app&raquo;</a></p>
     </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+    <div class="col-md-3">
+        <h2>But not many people own windows phones</h2>
+        <p>Aside from the above being a very small part of the solution, the platform isn't a particularly good test case.  I chose it because I was interested in trying my hand at windows phone programming
+        not because I thought it was the best initial platform.  One of my next steps will be to get the basic functionality for that application working on this web site.</p>
+    </div>
+    <div class="col-md-3">
+        <h2>Besides, what I really want to do</h2>
+        <p>Is to be able to generate a playlist of songs to dance a slow salsa or fast West Coast Swing or a Viennese Waltz to.  I'd like to do this against my own library or against one of
+        a multitude of streaming and mp3 purchase services.  The first baby step for that is the songs section of this website, where I've pulled together a bunch of that information
+        from a number of different sources, merged and edited, so that I've got at least a start of a database of song title/artist/albums associated with various dances.  In the long run I would like this
+        to be both crowd sourced and linked to actual music, but for now enjoy the browsing.</p>
     </div>
 </div>
